WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
10707
DumpRenderTree should not be able to access non-local resources
https://bugs.webkit.org/show_bug.cgi?id=10707
Summary
DumpRenderTree should not be able to access non-local resources
Alexey Proskuryakov
Reported
2006-09-03 02:06:55 PDT
To prevent issues like
bug 4508
from occurring in the future, it would be nice to make DRT prevent tests from accessing remote URLs.
Attachments
proposed fix
(8.75 KB, patch)
2008-05-15 04:46 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-05-15 04:46:02 PDT
Created
attachment 21160
[details]
proposed fix
mitz
Comment 2
2008-05-15 09:08:29 PDT
Comment on
attachment 21160
[details]
proposed fix r=me What about Windows?
Alexey Proskuryakov
Comment 3
2008-05-15 09:27:52 PDT
(In reply to
comment #2
)
> What about Windows?
Mac users (or buildbot) can tell them that they are wrong :-)
Alexey Proskuryakov
Comment 4
2008-05-15 10:23:49 PDT
Committed revision 33491.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug