        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=10707
        DumpRenderTree should not be able to access non-local resources

        * DumpRenderTree/mac/ResourceLoadDelegate.mm:
        (-[ResourceLoadDelegate webView:resource:willSendRequest:redirectResponse:fromDataSource:]):
        Block them, and complain.



Canonical link: https://commits.webkit.org/26360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@33491 268f45cc-cd09-0410-ab3c-d52691b4dbfc